Unhardcode HTML head

--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -8,7 +8,7 @@
 <html lang="{{ grav.language.getActive ?: grav.config.site.default_lang }}">
 <head>
 {% block head %}
-    <title>Solarize by TEMPLATED</title>
+    <title>{% if header.title %}{{ header.title|e('html') }} - {% endif %}{{ site.title|default('Solarize by TEMPLATED')|e('html') }}</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     {% include 'partials/metadata.html.twig' %}
