Add banner to homepage and rejig header block; add some expected homepage frontmatter

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,37 +2,8 @@
 
 {% block content %}
 	{{ page.content }}
-{% endblock %}
+{% endblock content %}
 
-{% block header %}
-
-	<!-- Header Wrapper -->
-		<div class="wrapper style1">
-
-		<!-- Header -->
-			<div id="header">
-				<div class="container">
-
-					<!-- Logo -->
-						<h1><a href="{{ home_url }}" id="logo">{{ site.title }}</a></h1>
-
-					<!-- Nav -->
-						<nav id="nav">
-							{% include 'partials/navigation.html.twig' %}
-						</nav>
-
-				</div>
-			</div>
-
-		<!-- Banner -->
-			<div id="banner">
-				<section class="container">
-					<h2>Solarize</h2>
-					<span>Design by Templated</span>
-					<p>Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna.</p>
-				</section>
-			</div>
-
-		</div>
-
-{% endblock header %}
+{% block banner %}
+	{% include 'partials/banner.html.twig' %}
+{% endblock banner %}
