--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -71,14 +71,7 @@
 					</div>
 				</div>
 
-			<!-- Banner -->
-				<div id="banner">
-					<section class="container">
-						<h2>Solarize</h2>
-						<span>Design by Templated</span>
-						<p>Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna.</p>
-					</section>
-				</div>
+				{% block banner %}{% endblock banner %}
 
 			</div>
 
