--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,9 +1,160 @@
 {% extends 'partials/base.html.twig' %}
 
-{% block content %}
-	{{ page.content }}
-{% endblock content %}
-
 {% block banner %}
 	{% include 'partials/banner.html.twig' %}
 {% endblock banner %}
+
+{% block body %}
+
+	{% if page.header.hook %}
+	<!-- Section One -->
+		<div class="wrapper style2 evenpart">
+			<section class="container">
+				<div class="row double">
+					<div class="6u">
+						<header class="major">
+							<h2>{{ header.hook.teaser }}</h2>
+							<span class="byline">{{ header.hook.byline }}</span>
+						</header>
+					</div>
+					<div class="6u">
+						{{ page.content }}
+						{% if page.header.hook.button %}
+							<a href="{{ header.hook.button.target }}" class="button">{{ header.hook.button.text }}</a>
+						{% endif %}
+					</div>
+				</div>
+			</section>
+		</div>
+	{% elseif page.content|trim|length > 0 %}
+		{{ dump('Notice: homepage markdown content not rendered because page header "hook" is missing in frontmatter.') }}
+	{% endif %}
+
+	<!-- Section Two -->
+		<div class="wrapper style3">
+			<section class="container">
+				<header class="major">
+					<h2>Cras vitae metus aliNuam</h2>
+				</header>
+				<p>Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu.</p>
+				<a href="#" class="button alt">Nulla aluctus eleifend</a>
+			</section>
+		</div>
+
+	<!-- Section Three -->
+		<div class="wrapper style4">
+			<section class="container">
+				<header class="major">
+					<h2>Cras vitae metus aliNuam</h2>
+					<span class="byline">pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu.</span>
+				</header>
+				<div class="row flush">
+					<div class="4u">
+						<ul class="special-icons">
+							<li>
+								<span class="fa fa-cogs"></span>
+								<h3>Nulla luctus eleifend</h3>
+								<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
+							</li>
+							<li>
+								<span class="fa fa-wrench"></span>
+								<h3>Etiam posuere augue</h3>
+								<p>Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat liguala.</p>
+							</li>
+							<li>
+								<span class="fa fa-leaf"></span>
+								<h3>Fusce ultrices fringilla</h3>
+								<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor.</p>
+							</li>
+						</ul>
+					</div>
+					<div class="4u">
+						<ul class="special-icons">
+							<li>
+								<span class="fa fa-cogs"></span>
+								<h3>Nulla luctus eleifend</h3>
+								<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
+							</li>
+							<li>
+								<span class="fa fa-wrench"></span>
+								<h3>Etiam posuere augue</h3>
+								<p>Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat liguala.</p>
+							</li>
+							<li>
+								<span class="fa fa-leaf"></span>
+								<h3>Fusce ultrices fringilla</h3>
+								<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor.</p>
+							</li>
+						</ul>
+					</div>
+					<div class="4u">
+						<ul class="special-icons">
+							<li>
+								<span class="fa fa-cogs"></span>
+								<h3>Nulla luctus eleifend</h3>
+								<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
+							</li>
+							<li>
+								<span class="fa fa-wrench"></span>
+								<h3>Etiam posuere augue</h3>
+								<p>Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat liguala.</p>
+							</li>
+							<li>
+								<span class="fa fa-leaf"></span>
+								<h3>Fusce ultrices fringilla</h3>
+								<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor.</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</div>
+
+	<!-- Team -->
+		<div class="wrapper style5">
+			<section id="team" class="container">
+				<header class="major">
+					<h2>Cras vitae metus aliNuam</h2>
+					<span class="byline">pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu</span>
+				</header>
+				<div class="row">
+					<div class="3u">
+						<a href="#" class="image"><img src="{{ theme_url }}/placeholders/person.png" alt=""></a>
+						<h3>Molly Millions</h3>
+						<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+					</div>
+					<div class="3u">
+						<a href="#" class="image"><img src="{{ theme_url }}/placeholders/person.png" alt=""></a>
+						<h3>Henry Dorsett Case</h3>
+						<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+					</div>
+					<div class="3u">
+						<a href="#" class="image"><img src="{{ theme_url }}/placeholders/person.png" alt=""></a>
+						<h3>Willis Corto</h3>
+						<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+					</div>
+					<div class="3u">
+						<a href="#" class="image"><img src="{{ theme_url }}/placeholders/person.png" alt=""></a>
+						<h3>Linda Lee</h3>
+						<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+					</div>
+				</div>
+			</section>
+		</div>
+
+{#
+	<section id="start">
+	{% block body %}
+		<section id="body-wrapper" class="section">
+			<section class="container {{ grid_size }}">
+				{% block messages %}
+					{% include 'partials/messages.html.twig' ignore missing %}
+				{% endblock %}
+				{% block content %}{% endblock %}
+			</section>
+		</section>
+	{% endblock %}
+	</section>
+#}
+
+{% endblock body %}
