--- a/css/style-narrower.css
+++ b/css/style-narrower.css
@@ -36,24 +36,29 @@
 		font-weight: 600;
 	}
 
-	.wrapper.style2 {
+	.wrapper.style2,
+	.wrapper.evenpart {
 		background: #f2f2f2;
 		text-align: center;
 	}
 
-		.wrapper.style2 .major {
+		.wrapper.style2 .major,
+		.wrapper.evenpart .major {
 			text-align: center !important;
 		}
 
-			.wrapper.style2 .major h2 {
+			.wrapper.style2 .major h2,
+			.wrapper.evenpart .major h2 {
 				font-size: 1.4em;
 			}
 
-			.wrapper.style2 .major .byline {
+			.wrapper.style2 .major .byline,
+			.wrapper.evenpart .major .byline {
 				font-size: 1em;
 			}
 
-		.wrapper.style2 h3 {
+		.wrapper.style2 h3,
+		.wrapper.evenpart h3 {
 			font-size: 1.2em;
 		}
 
