Break cta template into section partial; parameterise hook copy defaulting to page.content

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,18 +6,8 @@
 
 {% block body %}
 
-	{% include 'partials/sections/hook.html.twig' %}
-
-	<!-- Section Two -->
-		<div class="wrapper style3">
-			<section class="container">
-				<header class="major">
-					<h2>Cras vitae metus aliNuam</h2>
-				</header>
-				<p>Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu.</p>
-				<a href="#" class="button alt">Nulla aluctus eleifend</a>
-			</section>
-		</div>
+	{% include 'partials/sections/hook.html.twig' with { text_copy: page.content } %}
+	{% include 'partials/sections/cta.html.twig' %}
 
 	<!-- Section Three -->
 		<div class="wrapper style4">
