--- a/templates/partials/sections/cta.html.twig
+++ b/templates/partials/sections/cta.html.twig
@@ -1,6 +1,6 @@
 {% if page.header.cta %}
-<!-- Section Two -->
-	<div class="wrapper style3">
+<!-- Section Two aka 'cta' (CSS and frontmatter) -->
+	<div class="wrapper style3 cta">
 		<section class="container">
 			<header class="major">
 				<h2>{{ header.cta.headline }}</h2>
