--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -8,75 +8,7 @@
 
 	{% include 'partials/sections/hook.html.twig' with { text_copy: page.content } %}
 	{% include 'partials/sections/cta.html.twig' %}
-
-	<!-- Section Three -->
-		<div class="wrapper style4">
-			<section class="container">
-				<header class="major">
-					<h2>Cras vitae metus aliNuam</h2>
-					<span class="byline">pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu.</span>
-				</header>
-				<div class="row flush">
-					<div class="4u">
-						<ul class="special-icons">
-							<li>
-								<span class="fa fa-cogs"></span>
-								<h3>Nulla luctus eleifend</h3>
-								<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
-							</li>
-							<li>
-								<span class="fa fa-wrench"></span>
-								<h3>Etiam posuere augue</h3>
-								<p>Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat liguala.</p>
-							</li>
-							<li>
-								<span class="fa fa-leaf"></span>
-								<h3>Fusce ultrices fringilla</h3>
-								<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor.</p>
-							</li>
-						</ul>
-					</div>
-					<div class="4u">
-						<ul class="special-icons">
-							<li>
-								<span class="fa fa-cogs"></span>
-								<h3>Nulla luctus eleifend</h3>
-								<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
-							</li>
-							<li>
-								<span class="fa fa-wrench"></span>
-								<h3>Etiam posuere augue</h3>
-								<p>Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat liguala.</p>
-							</li>
-							<li>
-								<span class="fa fa-leaf"></span>
-								<h3>Fusce ultrices fringilla</h3>
-								<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor.</p>
-							</li>
-						</ul>
-					</div>
-					<div class="4u">
-						<ul class="special-icons">
-							<li>
-								<span class="fa fa-cogs"></span>
-								<h3>Nulla luctus eleifend</h3>
-								<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
-							</li>
-							<li>
-								<span class="fa fa-wrench"></span>
-								<h3>Etiam posuere augue</h3>
-								<p>Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat liguala.</p>
-							</li>
-							<li>
-								<span class="fa fa-leaf"></span>
-								<h3>Fusce ultrices fringilla</h3>
-								<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor.</p>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</section>
-		</div>
+	{% include 'partials/sections/quilt.html.twig' %}
 
 	<!-- Team -->
 		<div class="wrapper style5">
