Break team/portals section into partial template and fill out sample data in home frontmatter

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -9,38 +9,8 @@
 	{% include 'partials/sections/hook.html.twig' with { text_copy: page.content } %}
 	{% include 'partials/sections/cta.html.twig' %}
 	{% include 'partials/sections/quilt.html.twig' %}
+	{% include 'partials/sections/portals.html.twig' %}
 
-	<!-- Team -->
-		<div class="wrapper style5">
-			<section id="team" class="container">
-				<header class="major">
-					<h2>Cras vitae metus aliNuam</h2>
-					<span class="byline">pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu</span>
-				</header>
-				<div class="row">
-					<div class="3u">
-						<a href="#" class="image"><img src="{{ theme_url }}/placeholders/person.png" alt=""></a>
-						<h3>Molly Millions</h3>
-						<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-					</div>
-					<div class="3u">
-						<a href="#" class="image"><img src="{{ theme_url }}/placeholders/person.png" alt=""></a>
-						<h3>Henry Dorsett Case</h3>
-						<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-					</div>
-					<div class="3u">
-						<a href="#" class="image"><img src="{{ theme_url }}/placeholders/person.png" alt=""></a>
-						<h3>Willis Corto</h3>
-						<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-					</div>
-					<div class="3u">
-						<a href="#" class="image"><img src="{{ theme_url }}/placeholders/person.png" alt=""></a>
-						<h3>Linda Lee</h3>
-						<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-					</div>
-				</div>
-			</section>
-		</div>
 
 {#
 	<section id="start">
