Create parallel semantic classname 'portals' to deprecate 'style5'

--- a/css/ie/v8.css
+++ b/css/ie/v8.css
@@ -12,7 +12,8 @@
 
 /* Wrapper */
 
-	.wrapper.style5 .image img {
+	.wrapper.style5 .image img,
+	.wrapper.portals .image img {
 		position: relative;
 		-ms-behavior: url("css/ie/PIE.htc");
 	}
