--- a/templates/partials/sections/portals.html.twig
+++ b/templates/partials/sections/portals.html.twig
@@ -1,7 +1,7 @@
 {% if page.header.portals %}
 <!-- Team aka 'portals' (CSS and frontmatter) -->
 	{% set portals = page.header.portals %}
-	<div class="wrapper style5">
+	<div class="wrapper style5 portals">
 		<section id="team" class="container">
 			<header class="major">
 				<h2>{{ portals.heading }}</h2>
