Move footer into its own partial template

--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -83,33 +83,12 @@
 		{% endblock content %}
 	{% endblock body %}
 
+	{% block footer %}
+		{% include 'partials/footer.html.twig' %}
+	{% endblock footer %}
 
-{% block footer %}
-	<!-- Footer -->
-		<div id="footer">
-			<section class="container">
-				<header class="major">
-					<h2>Connect with us</h2>
-					<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
-				</header>
-				<ul class="icons">
-					<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-					<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-					<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
-					<li><a href="#" class="fa fa-google-plus"><span>Google+</span></a></li>
-				</ul>
-				<hr />
-			</section>
-
-			<!-- Copyright -->
-				<div id="copyright">
-					Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
-				</div>
-		</div>
-{% endblock %}
-
-{% block bottom %}
-	{{ assets.js('bottom') }}
-{% endblock %}
+	{% block bottom %}
+		{{ assets.js('bottom') }}
+	{% endblock bottom %}
 
 </body>
