--- a/templates/partials/sections/portals.html.twig
+++ b/templates/partials/sections/portals.html.twig
@@ -1,6 +1,7 @@
-{% if page.header.portals %}
+{% set data_source = data_source|default(page) %}
+{% if data_source.header.portals %}
 <!-- Team aka 'portals' (CSS and frontmatter) -->
-	{% set portals = page.header.portals %}
+	{% set portals = data_source.header.portals %}
 	<div class="wrapper style5 portals">
 		<section id="team" class="container">
 			<header class="major">
@@ -10,7 +11,7 @@
 			<div class="row">
 				{% for portal in portals.items|slice(0, 4) %}
 				<div class="3u">
-					<a href="{{ portal.target }}" alt="{{ portal.alt|default('') }}" class="image"><img src="{{ page.media[portal.thumbnail].resize(162,162).url }}" alt=""></a>
+					<a href="{{ portal.target }}" alt="{{ portal.alt|default('') }}" class="image"><img src="{{ data_source.media[portal.thumbnail].resize(162,162).url }}" alt=""></a>
 					<h3>{{ portal.heading }}</h3>
 					<p>{{ portal.teaser }}</p>
 				</div>
