--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -23,7 +23,7 @@
 {% endmacro %}
 
 <ul>
-    {% if theme_config.dropdown.enabled %}
+    {% if config.theme.dropdown.enabled %}
         {{ _self.loop(pages) }} {# TODO: not tested #}
     {% else %}
         {% for page in pages.children.visible %}
