--- a/templates/partials/sections/portals.html.twig
+++ b/templates/partials/sections/portals.html.twig
@@ -11,7 +11,7 @@
 			<div class="row">
 				{% for portal in portals.items|slice(0, 4) %}
 				<div class="3u">
-					<a href="{{ portal.target }}" alt="{{ portal.alt|default('') }}" class="image"><img src="{{ data_source.media[portal.thumbnail].resize(162,162).url }}" alt=""></a>
+					<a href="{{ portal.target }}" alt="{{ portal.alt|default('') }}" class="image"><img src="{{ data_source.media[portal.thumbnail].resize(162,162).url }}"></a>
 					<h3>{{ portal.heading }}</h3>
 					<p>{{ portal.teaser }}</p>
 				</div>
