Fix Twig reference to page subtitle in default template

--- a/templates/default.html.twig
+++ b/templates/default.html.twig
@@ -9,15 +9,15 @@
             <section>
                 <header class="major">
                     <h2>{{ page.title }}</h2>
-                    {% if page.subtitle %}
-                        <span class="byline">{{ page.subtitle }}</span>
+                    {% if page.header.subtitle %}
+                        <span class="byline">{{ page.header.subtitle }}</span>
                     {% endif %}
                 </header>
                 {{ page.content }}
             </section>
         </div>
     </div>
-{{ dump(page.find('/').header.portals) }}
+
     {% include 'partials/sections/portals.html.twig' with { 'data_source': page.find('/') } %}
 
 {% endblock body %}
