Move heading into partial template for default and left-sidebar templates

--- a/templates/default.html.twig
+++ b/templates/default.html.twig
@@ -7,12 +7,7 @@
         <!-- Content -->
         <div id="content" class="container">
             <section>
-                <header class="major">
-                    <h2>{{ page.title }}</h2>
-                    {% if page.header.subtitle %}
-                        <span class="byline">{{ page.header.subtitle }}</span>
-                    {% endif %}
-                </header>
+                {% include 'partials/heading.html.twig' %}
                 {{ page.content }}
             </section>
         </div>
