Change clearly mistaken full_width classname to 'plain' in CSS and templates

--- a/templates/default.html.twig
+++ b/templates/default.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 <!-- Main -->
-    <div id="main" class="wrapper style4 full_width">
+    <div id="main" class="wrapper style4 plain">
 
         <!-- Content -->
         <div id="content" class="container">
