--- a/templates/partials/sections/quilt.html.twig
+++ b/templates/partials/sections/quilt.html.twig
@@ -3,8 +3,8 @@
 
 {% if page.header.notices %}
 {% set notices = page.header.notices %}
-<!-- Section Three aka full_width aka 'notices' (frontmatter) -->
-	<div class="wrapper style4 full_width">
+<!-- Section Three aka plain aka 'notices' (frontmatter) -->
+	<div class="wrapper style4 plain">
 		<section class="container">
 			<header class="major">
 				<h2>{{ notices.heading }}</h2>
