--- a/templates/left-sidebar.html.twig
+++ b/templates/left-sidebar.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 	<!-- Main -->
-		<div id="main" class="wrapper style4">
+		<div id="main" class="wrapper style4 plain">
 			<div class="container">
 				<div class="row">
 
