--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -8,7 +8,7 @@
                     {{ p.menu }}
                 </a>
                 <ul>
-                    {{ _self.loop(p) }}
+                    {{ navigation.loop(p) }}
                 </ul>
             </li>
         {% else %}
@@ -21,10 +21,10 @@
         {% endif %}
     {% endfor %}
 {% endmacro %}
-
+{% import _self as navigation %}
 <ul>
     {% if config.theme.dropdown.enabled %}
-        {{ _self.loop(pages) }} {# TODO: not tested #}
+        {{ navigation.loop(pages) }} {# TODO: not tested #}
     {% else %}
         {% for page in pages.children.visible %}
             {% set current_page = (page.active or page.activeChild) ? 'active' : '' %}
