--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -21,7 +21,7 @@
 		{% do assets.addJs('theme://js/jquery.dropotron.min.js') %}
 		{% do assets.addJs('theme://js/skel.min.js') %}
 		{% do assets.addJs('theme://js/skel-layers.min.js') %}
-		{% do assets.addJs('theme://js/init.js', {'group': 'init'} ) %}
+		{% do assets.addJs('theme://js/init.js', {'group': 'init', 'data-theme-root': theme_url} ) %}
 	{% endblock %}
 
 	{% block stylesheets %}
@@ -39,12 +39,14 @@
 		{% do assets.addCss('theme://css/custom.css') %}
 	{% endblock %}
 
-	{{ assets.js() }}
-	{{ assets.js('init', { 'data-theme-root': theme_url } ) }}
-	{{ assets.css() }}
-	<noscript>
-		{{ assets.css('noscript') }}
-	</noscript>
+	{% block assets %}
+		{{ assets.js() }}
+		{{ assets.js('init', {'data-theme-root': theme_url} ) }} {# required for pre deferred assets Twig versions, see https://getgrav.org/blog/important-theme-updates #}
+		{{ assets.css() }}
+		<noscript>
+			{{ assets.css('noscript') }}
+		</noscript>
+	{% endblock assets %}
 
 {% endblock head %}
 </head>
