Add test deferred Twig block for live server to confirm deferred overrides work

--- a/templates/left-sidebar.html.twig
+++ b/templates/left-sidebar.html.twig
@@ -1,4 +1,4 @@
-{% extends 'partials/base.html.twig' %}
+{% extends 'partials/extended-base.html.twig' %}
 
 {% block body %}
 
@@ -16,7 +16,7 @@
 					<div id="content" class="8u skel-cell-important">
 						<section>
 							{% include 'partials/heading.html.twig' %}
-							{{ page.content }}
+							<p>Yup it's different content</p>
 						</section>
 					</div>
 				</div>
