--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("font-awesome.min.css");
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
+@import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
 
 /*
 	Solarize by TEMPLATED
