Add raw filters for rendered content and assets, fixes #12

--- a/templates/default.html.twig
+++ b/templates/default.html.twig
@@ -8,7 +8,7 @@
 		<div id="content" class="container">
 			<section>
 				{% include 'partials/heading.html.twig' %}
-				{{ page.content }}
+				{{ page.content|raw }}
 			</section>
 		</div>
 	</div>
