--- a/templates/right-sidebar.html.twig
+++ b/templates/right-sidebar.html.twig
@@ -11,7 +11,7 @@
 					<div id="content" class="8u skel-cell-important">
 						<section>
 							{% include 'partials/heading.html.twig' %}
-							{{ page.content }}
+							{{ page.content|raw }}
 						</section>
 					</div>
 
